# sertn-avs

./: .gitignore  .gitmodules  .isort.cfg  Makefile  README.md  aggregator.py  constants.py  cspell.json  el-info.json  foundry.toml  go.mod  go.sum  init.sh  pyproject.toml  requirements.txt  squaring_operator.py  task_operator.py
.devcontainer/: Dockerfile  devcontainer.json
abis/: AllocationManager.abi.json  DelegationManager.abi.json  ERC20.abi.json  ModelRegistry.abi.json  RewardsCoordinator.abi.json  SertnNodesManager.abi.json  SertnServiceManager.abi.json  SertnTaskManager.abi.json  StrategyBase.abi.json  StrategyManager.abi.json
aggregator/: aggregator.go  aggregator_test.go  rpc_server.go  rpc_server_test.go
challenger/: challenger.go  challenger_test.go
cli/: main.go
client/: .gitignore  .isort.cfg  .pylintrc  CONTRIBUTING.md  README.md  check_operators.py  create_task.py  pyproject.toml  register_aggregator.py  register_eigen.py  register_operator.py  setup_sertn.py
client/configs/: aggregator.yaml  operator.yaml  owner.yaml  readme.md
client/src/: main.py
client/src/aggregator/: __init__.py  main.py
client/src/avs_operator/: __init__.py  delegate.py  main.py  nodes.py  utils.py
client/src/common/: abis.py  auto_update.py  config.py  console.py  constants.py  contract_constants.py  eth.py  gas_strategy.py  generate_key.py  logging.py
client/src/management/: __init__.py  commands.py  owner.py
client/src/models/: onnx_run.py
client/src/models/execution_layer/: base_input.py  model_config.py  model_registry.py
client/src/models/models/model_0/: model.compiled  settings.json  vk.key
client/src/models/models/model_1/: input.py  metadata.json
client/src/models/proof/: ezkl_handler.py
client/src/owner/: main.py
client/tests/: conftest.py  test_cli.py  test_eth.py  test_model_registry.py  test_workflow.py
client/tests/keys/: operator.ecdsa.key.json  owner.ecdsa.key.json  test.bls.key.json
common/: abi.go
config-files/: operator.anvil.yaml
configs/: aggregator.yaml
contracts/: .env.example  .gitignore  .prettierrc.json  foundry.toml  generate-go-bindings.sh
core/: utils.go  utils_test.go
metrics/: metrics.go
operator/: gen.go  operator.go  operator_test.go  registration.go  registration_test.go  rpc_client.go
python/: format.py  model_0.py  model_1.py  model_db.py  prove.py  requirements.txt  run.py  utils.py
scripts/: deposit-into-mocktoken-strategy.sh
sertn-fe/: index.html  package-lock.json  tailwind.config.js
tests/: utils.go
zklayer-fe/: index.html  package-lock.json  (+1 more)
(+186 files in other folders)
